crates/plotnik-lib/src/engine/snapshots/plotnik_lib__engine__engine_tests__recursion_member_chain.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Chain = [Base: (identifier) @name  Access: (member_expression object: (Chain) @base property: (property_identifier) @prop)]
Q = (program (expression_statement (Chain) @chain))
---
a.b.c
---
{
  "base": {
    "$tag": "Base",
    "$data": {
      "name": {
        "kind": "identifier",
        "text": "a",
        "span": [
          0,
          1
        ]
      }
    }
  },
  "prop": {
    "kind": "property_identifier",
    "text": "b",
    "span": [
      2,
      3
    ]
  },
  "base": null,
  "prop": {
    "kind": "property_identifier",
    "text": "c",
    "span": [
      4,
      5
    ]
  },
  "chain": null
}
