crates/plotnik-lib/src/engine/snapshots/plotnik_lib__engine__engine_tests__regression_call_searches_among_siblings.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Num = (number) @n
Q = (program (expression_statement (array (Num) @num)))
---
[1, 2, 3]
---
{
  "num": {
    "n": {
      "kind": "number",
      "text": "1",
      "span": [
        1,
        2
      ]
    }
  }
}
