crates/plotnik-lib/src/engine/snapshots/plotnik_lib__engine__engine_tests__regression_call_searches_for_field_constraint.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Expr = [Lit: (number) @val  Binary: (binary_expression left: (Expr) @left right: (Expr) @right)]
Q = (program (expression_statement (Expr) @expr))
---
1 + 2
---
{
  "left": {
    "$tag": "Lit",
    "$data": {
      "val": {
        "kind": "number",
        "text": "1",
        "span": [
          0,
          1
        ]
      }
    }
  },
  "right": {
    "$tag": "Lit",
    "$data": {
      "val": {
        "kind": "number",
        "text": "2",
        "span": [
          4,
          5
        ]
      }
    }
  },
  "expr": null
}
