crates/plotnik-lib/src/engine/snapshots/plotnik_lib__engine__engine_tests__regression_empty_captured_sequence.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Q = (program (expression_statement (identifier) @id { } @empty))
---
x
---
{
  "id": {
    "kind": "identifier",
    "text": "x",
    "span": [
      0,
      1
    ]
  },
  "empty": {}
}
