crates/plotnik-lib/src/engine/snapshots/plotnik_lib__engine__engine_tests__regression_enum_variant_array_capture_payload.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
E = [A: (identifier) @x  B: (number) @y]
F = [First: (E)* @arr  Second: (E)+ @arr2]
Test = (program (expression_statement (F)))
---
x
---
{
  "$tag": "First",
  "$data": {
    "arr": [
      {
        "$tag": "A",
        "$data": {
          "x": {
            "kind": "identifier",
            "text": "x",
            "span": [
              0,
              1
            ]
          }
        }
      }
    ]
  }
}
